Modifying example code from d3 v4 to work for v5. Starting callbacks successfully

--- a/assets/stylesheets/components/front_page.scss
+++ b/assets/stylesheets/components/front_page.scss
@@ -35,3 +35,11 @@
   height: 100vh;
   background-color: aqua;
 }
+
+.states {
+  background-color: aqua;
+}
+
+svg {
+  background-color: white;
+}
