--- a/assets/stylesheets/components/base_map.scss
+++ b/assets/stylesheets/components/base_map.scss
@@ -1,3 +1,26 @@
+$transparent: rgba(255, 255, 255, 0);
+$wt_14: rgba(255, 255, 255, 0.14);
+$wt_11: rgba(255, 255, 255, 0.11);
+
 svg {
-  background-color: magenta;
+  background-color: $transparent;
+
+  path.state {
+    // border-style: solid;
+    // border: 4px solid aqua;
+    fill: $wt_11;
+  } 
+
+  path.state:hover {
+    fill: red;
+  }
+
+  path.state-borders {
+    fill: none;
+    stroke: $wt_14;
+    stroke-width: 0.5px;
+    stroke-linejoin: round;
+    stroke-linecap: round;
+    pointer-events: none;
+  }
 }
