Positions map in dark mode properly

--- a/assets/stylesheets/components/base_map.scss
+++ b/assets/stylesheets/components/base_map.scss
@@ -4,6 +4,7 @@ $wt_11: rgba(255, 255, 255, 0.11);
 
 svg {
   background-color: $transparent;
+  padding: 8vh 0 0 5vw;
 
   path.state {
     // border-style: solid;
