--- a/assets/stylesheets/base/config.scss
+++ b/assets/stylesheets/base/config.scss
@@ -1,7 +1,6 @@
 // Colors
-
-
 $transparent: rgba(255, 255, 255, 0.00);
+// White:
 $wt_05: rgba(255, 255, 255, 0.05);
 $wt_07: rgba(255, 255, 255, 0.07);
 $wt_08: rgba(255, 255, 255, 0.08);
