--- a/assets/stylesheets/components/base_map.scss
+++ b/assets/stylesheets/components/base_map.scss
@@ -1,6 +1,6 @@
-$transparent: rgba(255, 255, 255, 0);
-$wt_14: rgba(255, 255, 255, 0.14);
-$wt_11: rgba(255, 255, 255, 0.11);
+// $transparent: rgba(255, 255, 255, 0);
+// $wt_14: rgba(255, 255, 255, 0.14);
+// $wt_11: rgba(255, 255, 255, 0.11);
 
 svg {
   background-color: $transparent;
