--- a/assets/stylesheets/components/front_page.scss
+++ b/assets/stylesheets/components/front_page.scss
@@ -6,7 +6,7 @@
 .nav_bar {
   display: flex;
   justify-content: space-between;
-  background-color: rgba(255, 255, 255, 0.05);
+  background-color: $wt_05;
 
   .nb_left {
     display: flex;
