Import styling for About modal; box shadow and basic coloring and position for now

--- a/assets/stylesheets/entry_style.scss
+++ b/assets/stylesheets/entry_style.scss
@@ -5,3 +5,4 @@
 // Components:
 @import './components/front_page.scss';
 @import './components/base_map.scss';
+@import './components/about_modal.scss';
