Touches up styling for modal

--- a/assets/stylesheets/base/config.scss
+++ b/assets/stylesheets/base/config.scss
@@ -10,3 +10,20 @@ $wt_12: rgba(255, 255, 255, 0.12);
 $wt_14: rgba(255, 255, 255, 0.14);
 $wt_15: rgba(255, 255, 255, 0.15);
 $wt_16: rgba(255, 255, 255, 0.16);
+// whiter text
+$wt_85: rgba(255, 255, 255, 0.85);
+$wt_95: rgba(255, 255, 255, 0.95);
+
+/*
+primary:
+$prim
+$p_lt
+$p_dk
+
+secondary
+$secd
+$s_lt
+$s_dk
+
+$err
+*/
