--- a/assets/stylesheets/output.css
+++ b/assets/stylesheets/output.css
@@ -82,6 +82,19 @@ input, select {
 input {
   border-style: none; }
 
+/*
+primary:
+$prim
+$p_lt
+$p_dk
+
+secondary
+$secd
+$s_lt
+$s_dk
+
+$err
+*/
 .nav_bar {
   display: flex;
   justify-content: space-between;
@@ -117,6 +130,7 @@ svg {
   background: rgba(255, 255, 255, 0.07); }
 
 .modal {
+  display: none;
   position: fixed;
   z-index: 1;
   left: 0;
@@ -132,3 +146,18 @@ svg {
   padding: 5%;
   width: 80%;
   box-shadow: 0 5px 8px 0 rgba(255, 255, 255, 0.05), 0 7px 20px 0 rgba(255, 255, 255, 0.16); }
+  .modal-content h1 {
+    font-size: 25px;
+    margin-bottom: 10px; }
+
+.closeBtn {
+  position: absolute;
+  right: 6vw;
+  top: 10.5vh;
+  font-size: 45px;
+  color: rgba(255, 255, 255, 0.85); }
+
+.closeBtn:hover, .closeBtn:focus {
+  color: rgba(255, 255, 255, 0.95);
+  text-decoration: none;
+  cursor: pointer; }
