--- a/assets/stylesheets/components/front_page.scss
+++ b/assets/stylesheets/components/front_page.scss
@@ -15,7 +15,7 @@
       text-align: center;
       padding: 1vw;
       font-size: 4vh;
-      // background-color: rgba(255, 255, 255, 0.07); // Change to an onClick
+      // background-color: rgba(255, 255, 255, 0.07); // Change to an onClick maybe?
     }
   }
 
