--- a/assets/stylesheets/entry_style.scss
+++ b/assets/stylesheets/entry_style.scss
@@ -6,3 +6,4 @@
 @import './components/front_page.scss';
 @import './components/base_map.scss';
 @import './components/about_modal.scss';
+@import './components/story_modal.scss';
