--- a/assets/stylesheets/components/story_modal.scss
+++ b/assets/stylesheets/components/story_modal.scss
@@ -1,7 +1,8 @@
 .story-modal {
   // display: none;
-  display: flex;
   position: fixed;
+  display: flex;
+  flex-direction: row;
   z-index: 1;
   left: 1vw;
   top: 10vh;
@@ -12,6 +13,7 @@
   // background-color: rgba(18,18,18,0.75);
   justify-content: center;
   text-align: center;
+  align-content: space-between;
 
   h1 {
     font-size: 25px;
