--- a/assets/stylesheets/output.css
+++ b/assets/stylesheets/output.css
@@ -171,14 +171,14 @@ svg {
   height: 200px;
   width: 34vw;
   overflow: auto;
-  background: rgba(255, 255, 255, 0.05);
+  background-color: rgba(18, 18, 18, 0.75);
   align-content: center;
-  text-align: center; }
+  text-align: center;
+  box-shadow: 0px 0px 5px 6px rgba(255, 255, 255, 0.05), 3px 3px 5px 5px rgba(255, 255, 255, 0.16); }
   .story-modal h1 {
     font-size: 25px;
     margin: 10px 0px; }
   .story-modal .modal-content {
-    background-color: magenta;
     width: 90%;
     height: 155px;
     align-self: center;
@@ -186,22 +186,18 @@ svg {
     flex-direction: column;
     justify-content: space-between; }
   .story-modal p {
-    margin-bottom: 10px;
-    background: aqua; }
+    margin-bottom: 10px; }
   .story-modal .btn {
     font-size: 30px;
-    background-color: maroon;
     margin: 0 5px; }
 
 .storyNav {
   display: flex;
   align-content: center;
   justify-content: center;
-  background: greenyellow;
   margin: 10px 0; }
 
 .storyNumHolder {
-  background-color: mediumblue;
   display: flex;
   flex-direction: column;
   justify-content: center; }
