Tests js function to toggle story modal

--- a/assets/stylesheets/output.css
+++ b/assets/stylesheets/output.css
@@ -161,6 +161,9 @@ svg {
   text-decoration: none;
   cursor: pointer; }
 
+#storyModBtn {
+  background-color: rgba(255, 255, 255, 0.09); }
+
 .story-modal {
   position: fixed;
   display: flex;
