Fix CSS so hover and clicking works

--- a/assets/stylesheets/components/story_modal.scss
+++ b/assets/stylesheets/components/story_modal.scss
@@ -1,5 +1,7 @@
-#storyModBtn {
-  background-color: $wt_16;
+#storyModBtn:hover { // TODO: NOT WORKING.
+  // z-index: 1;
+  background-color: $wt_07;
+  cursor: pointer;
 }
 
 .story-modal {
