--- a/assets/stylesheets/output.css
+++ b/assets/stylesheets/output.css
@@ -127,7 +127,8 @@ svg {
     pointer-events: none; }
 
 .modalButton:hover {
-  background: rgba(255, 255, 255, 0.07); }
+  background: rgba(255, 255, 255, 0.07);
+  cursor: pointer; }
 
 .modal {
   display: none;
@@ -161,8 +162,9 @@ svg {
   text-decoration: none;
   cursor: pointer; }
 
-#storyModBtn {
-  background-color: rgba(255, 255, 255, 0.16); }
+#storyModBtn:hover {
+  background-color: rgba(255, 255, 255, 0.07);
+  cursor: pointer; }
 
 .story-modal {
   position: fixed;
