Import story nav functionality, adds listeners for story nav

--- a/assets/stylesheets/components/story_modal.scss
+++ b/assets/stylesheets/components/story_modal.scss
@@ -44,6 +44,10 @@
   justify-content: center;
   // background: greenyellow;
   margin: 10px 0;
+
+  .btn:hover {
+    cursor: pointer;
+  }
 }
 .storyNumHolder {
   // width: 80%;
