--- a/assets/stylesheets/output.css
+++ b/assets/stylesheets/output.css
@@ -171,7 +171,6 @@ svg {
   top: 10vh;
   height: 200px;
   width: 34vw;
-  overflow: auto;
   background-color: rgba(18, 18, 18, 0.75);
   align-content: center;
   text-align: center;
@@ -187,7 +186,8 @@ svg {
     flex-direction: column;
     justify-content: space-between; }
   .story-modal p {
-    margin-bottom: 10px; }
+    margin-bottom: 10px;
+    overflow: auto; }
   .story-modal .btn {
     font-size: 30px;
     margin: 0 5px; }
@@ -199,8 +199,14 @@ svg {
   margin: 10px 0; }
   .storyNav .btn:hover {
     cursor: pointer; }
+  .storyNav .fkBtn {
+    display: none;
+    color: rgba(255, 255, 255, 0.16);
+    font-size: 30px;
+    margin: 0 5px; }
 
 .storyNumHolder {
+  width: 30%;
   display: flex;
   flex-direction: column;
   justify-content: center; }
