Adjusts margin and padding to control spacing

--- a/assets/stylesheets/components/front_page.scss
+++ b/assets/stylesheets/components/front_page.scss
@@ -7,6 +7,7 @@
   display: flex;
   justify-content: space-between;
   background-color: $wt_05;
+  margin-bottom: 5vh;
 
   .nb_left {
     display: flex;
