--- a/assets/stylesheets/components/story_modal.scss
+++ b/assets/stylesheets/components/story_modal.scss
@@ -29,10 +29,17 @@
     justify-content: space-between;
   }
   p {
-    margin-bottom: 10px;
     // background: aqua;
+    margin-bottom: 10px;
     overflow: auto;
+    text-align: left;
   }
+
+  li {
+    list-style: none;
+    margin: 5px;
+  }
+
   .btn {
     font-size: 30px;
     // background: maroon;
