--- a/assets/stylesheets/output.css
+++ b/assets/stylesheets/output.css
@@ -188,7 +188,11 @@ svg {
     justify-content: space-between; }
   .story-modal p {
     margin-bottom: 10px;
-    overflow: auto; }
+    overflow: auto;
+    text-align: left; }
+  .story-modal li {
+    list-style: none;
+    margin: 5px; }
   .story-modal .btn {
     font-size: 30px;
     margin: 0 5px; }
